syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServices.UserManagement";

service CityService {
    rpc GetAllCity (google.protobuf.Empty) returns (CityListReponse);
}

message CityDto {
    int32 CityId=1;
    string CityCode =2;
    string CityName=3;
  
}

message CityListReponse  {
    repeated CityDto cities=1;
}
